--- a/style/solar_system.css
+++ b/style/solar_system.css
@@ -1,9 +1,12 @@
 /*Estilo Genereales | General Styles*/
 body {
-    background-color: #221e1d
+    background-color: #222034;
+    background-image: url('../assets/stars.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 
-/*Estilo del contenedor principal | Main Container Style*/
 .main {
     display: flex;
     justify-content: center;
@@ -11,7 +14,7 @@ body {
     height: 90vh;
 }
 
-/*Estilo del contenedor del sol | Sun Container Style*/
+/*Estilos del Sol, Planetas y Asteroides | Styles of the Sun, Planets and Asteroids*/
 #sun {
     display: flex;
     justify-content: center;
@@ -41,8 +44,8 @@ body {
 
 #venus {
     position: absolute;
-    width: 120px;
-    height: 120px;
+    width: 130px;
+    height: 130px;
     animation: rotation 6.5s infinite linear;
     
 }
@@ -55,8 +58,8 @@ body {
 
 #earth {
     position: absolute;
-    width: 160px;
-    height: 160px;
+    width: 180px;
+    height: 180px;
     animation: rotation 10s infinite linear;
 }
 
@@ -68,8 +71,8 @@ body {
 
 #mars {
     position: absolute;
-    width: 180px;
-    height: 180px;
+    width: 230px;
+    height: 230px;
     animation: rotation 18.8s infinite linear;
 }
 
@@ -81,20 +84,20 @@ body {
 
 #asteroids {
     position: absolute;
-    width: 350px;
-    height: 350px;
+    width: 440px;
+    height: 440px;
 }
 
 #asteroids img {
-    
     width: 100%;
     height: auto;
+    animation: counterRotation2 260s infinite linear;
 }
 
 #jupiter {
     position: absolute;
-    width: 320px;
-    height: 320px;
+    width: 360px;
+    height: 360px;
     animation: rotation 118.7s infinite linear;
 }
 
@@ -106,21 +109,21 @@ body {
 
 #saturn {
     position: absolute;
-    width: 360px;
-    height: 360px;
+    width: 410px;
+    height: 410px;
     animation: rotation 294.8s infinite linear;
 }
 
 #saturn img {
-    width: 34px;
+    width: 40px;
     height: 25px;
     animation: counterRotation 294.8s infinite linear;
 }
 
 #uranus {
     position: absolute;
-    width: 400px;
-    height: 400px;
+    width: 460px;
+    height: 460px;
     animation: rotation 840.4s infinite linear;
 }
 
@@ -132,8 +135,8 @@ body {
 
 #neptune {
     position: absolute;
-    width: 440px;
-    height: 440px;
+    width: 510px;
+    height: 510px;
     animation: rotation 45.2s infinite linear;
 }
 
@@ -143,7 +146,7 @@ body {
     animation: counterRotation 45.2s infinite linear;
 }
 
-/*Animacion de rotacion de la tierra | Earth Rotation Animation*/
+/*Animaciones | Animations*/
 @keyframes rotation {
     from {
         transform: rotate(0deg);
@@ -154,7 +157,6 @@ body {
     }
 }
 
-/*Animacion de rotacion contraria de la tierra | Earth Counter Rotation Animation*/
 @keyframes counterRotation {
     from {
         transform: rotate(0deg);
@@ -162,5 +164,15 @@ body {
 
     to {
         transform: rotate(-359deg);
+    }
+}
+
+@keyframes counterRotation2 {
+    from {
+        transform: rotate(-359deg);
+    }
+
+    to {
+        transform: rotate(0deg);
     }
 }
